--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,9 @@
         "type_traits": "c",
         "utility": "c",
         "string": "c",
-        "string_view": "c"
+        "string_view": "c",
+        "deque": "c",
+        "vector": "c",
+        "iterator": "c"
     }
 }
